--- a/package.json
+++ b/package.json
@@ -5,24 +5,25 @@
     "dependencies": {
         "@apidevtools/json-schema-ref-parser": "^9.0.9",
         "@etclabscore/monaco-add-json-schema-diagnostics": "^1.0.3",
-        "@etclabscore/react-monaco-editor": "1.0.4",
+        "@etclabscore/react-monaco-editor": "1.1.1",
         "@material-ui/core": "4.9.8",
         "@material-ui/icons": "4.9.1",
         "@material-ui/lab": "4.0.0-alpha.47",
         "@material-ui/styles": "4.9.6",
         "@mdx-js/mdx": "^1.5.4",
-        "@mdx-js/react": "^1.5.4",
-        "@metamask/api-specs": "^0.0.27",
+        "@mdx-js/react": "^1.6.22",
+        "@metamask/api-specs": "^0.0.29",
         "@open-rpc/meta-schema": "^1.14.2",
-        "@open-rpc/schema-utils-js": "^1.14.3",
+        "@open-rpc/schema-utils-js": "^1.15.0",
         "canvg": "^3.0.7",
         "gatsby": "2.32.11",
-        "gatsby-plugin-manifest": "^3.7.1",
+        "gatsby-plugin-manifest": "^3.12.0",
+        "gatsby-plugin-webfonts": "^2.1.1",
         "gatsby-theme-material-ui": "^2.0.1",
         "loader-utils": "2.0.0",
         "lodash": "^4.17.15",
-        "monaco-editor": "0.18.1",
-        "monaco-editor-webpack-plugin": "1.7.0",
+        "monaco-editor": "0.27.0",
+        "monaco-editor-webpack-plugin": "4.1.2",
         "qs": "^6.10.1",
         "react": "16.12.0",
         "react-device-detect": "^1.17.0",
@@ -34,7 +35,6 @@
         "use-dark-mode": "^2.3.1"
     },
     "devDependencies": {
-        "@lavamoat/allow-scripts": "^1.0.5",
         "@metamask/eslint-config": "^6.0.0",
         "@metamask/eslint-config-jest": "^6.0.0",
         "@metamask/eslint-config-nodejs": "^6.0.0",
@@ -51,7 +51,7 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-react": "^7.23.2",
         "node-fetch": "^2.6.0",
-        "prettier": "^1.19.1",
+        "raw-loader": "^4.0.2",
         "typescript": "^3.7.4"
     },
     "keywords": [
@@ -68,20 +68,5 @@
         "clean": "gatsby clean",
         "test": "exit 0",
         "type-check": "tsc --noEmit"
-    },
-    "lavamoat": {
-        "allowScripts": {
-            "gatsby": false,
-            "core-js": false,
-            "core-js-pure": false,
-            "gatsby-cli": false,
-            "gatsby-telemetry": false,
-            "fsevents": false,
-            "sharp": true,
-            "mozjpeg": false,
-            "pngquant-bin": false,
-            "puppeteer": false,
-            "@lavamoat/preinstall-always-fail": false
-        }
     }
 }
