--- a/netlify.toml
+++ b/netlify.toml
@@ -7,19 +7,19 @@
   [build.processing]
     skip_processing = false
   [build.processing.css]
-    bundle = true
-    minify = true
+    bundle = false
+    minify = false
   [build.processing.js]
-    bundle = true
-    minify = true
+    bundle = false
+    minify = false
   [build.processing.html]
-    pretty_urls = true
+    pretty_urls = false
   [build.processing.images]
-    compress = true
-    
-[[plugins]]
-  package = "netlify-plugin-gatsby-cache"
-  
+    compress = false
+
+#[[plugins]]
+ # package = "netlify-plugin-gatsby-cache"
+
  [headers]
 # Define which paths this specific [[headers]] block will cover.
   for = "/*"
