--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
     "description": "",
     "version": "0.0.22",
     "dependencies": {
-      "@apidevtools/json-schema-ref-parser": "^9.0.9",
-      "@etclabscore/monaco-add-json-schema-diagnostics": "^1.0.3",
-      "@etclabscore/react-monaco-editor": "1.1.1",
-      "@material-ui/core": "4.9.8",
-      "@material-ui/icons": "4.9.1",
-      "@material-ui/lab": "4.0.0-alpha.47",
-      "@material-ui/styles": "4.9.6",
-      "@mdx-js/mdx": "^1.5.4",
-      "@mdx-js/react": "^1.5.4",
-      "@metamask/api-specs": "^0.0.27",
-      "@open-rpc/meta-schema": "^1.14.2",
-      "@open-rpc/schema-utils-js": "^1.14.3",
-      "canvg": "^3.0.7",
-      "gatsby": "2.32.11",
-      "gatsby-plugin-manifest": "^3.7.1",
-      "gatsby-plugin-webfonts": "^2.1.1",
-      "gatsby-theme-material-ui": "^2.0.1",
-      "loader-utils": "2.0.0",
-      "lodash": "^4.17.15",
-      "monaco-editor": "0.27.0",
-      "monaco-editor-webpack-plugin": "1.9.1",
-      "qs": "^6.10.1",
-      "raw-loader": "^0.5.1",
-      "react": "16.12.0",
-      "react-device-detect": "^1.17.0",
-      "react-dom": "16.12.0",
-      "react-helmet": "^5.2.1",
-      "react-qr-code": "^1.1.1",
-      "reusable": "1.0.1",
-      "use-clipboard-copy": "^0.2.0",
-      "node-fetch": "^2.6.0",
-      "@types/qs": "^6.9.6",
-      "@types/react-helmet": "^5.0.15",
-      "use-dark-mode": "^2.3.1"
+        "@apidevtools/json-schema-ref-parser": "^9.0.9",
+        "@etclabscore/monaco-add-json-schema-diagnostics": "^1.0.3",
+        "@etclabscore/react-monaco-editor": "1.1.1",
+        "@material-ui/core": "4.9.8",
+        "@material-ui/icons": "4.9.1",
+        "@material-ui/lab": "4.0.0-alpha.47",
+        "@material-ui/styles": "4.9.6",
+        "@mdx-js/mdx": "^1.5.4",
+        "@mdx-js/react": "^1.5.4",
+        "@metamask/api-specs": "^0.0.27",
+        "@open-rpc/meta-schema": "^1.14.2",
+        "@open-rpc/schema-utils-js": "^1.14.3",
+        "@types/qs": "^6.9.6",
+        "@types/react-helmet": "^5.0.15",
+        "canvg": "^3.0.7",
+        "gatsby": "2.32.11",
+        "gatsby-plugin-manifest": "^3.7.1",
+        "gatsby-plugin-webfonts": "^2.1.1",
+        "gatsby-theme-material-ui": "^2.0.1",
+        "loader-utils": "2.0.0",
+        "lodash": "^4.17.15",
+        "monaco-editor": "^0.27.0",
+        "monaco-editor-webpack-plugin": "^2",
+        "node-fetch": "^2.6.0",
+        "qs": "^6.10.1",
+        "raw-loader": "^0.5.1",
+        "react": "16.12.0",
+        "react-device-detect": "^1.17.0",
+        "react-dom": "16.12.0",
+        "react-helmet": "^5.2.1",
+        "react-qr-code": "^1.1.1",
+        "reusable": "1.0.1",
+        "use-clipboard-copy": "^0.2.0",
+        "use-dark-mode": "^2.3.1",
+        "webpack": "4.44.2"
     },
     "devDependencies": {
         "@metamask/eslint-config": "^6.0.0",
